@@ -1,0 +1,5 @@
+# Feel free to fill this file with your preferred profanities, at the rate of one
+# profanity per line. The match performed against this file is case-unsensitive
+
+fuck
+shit
